--- a/webviewadapter/src/main/AndroidManifest.xml
+++ b/webviewadapter/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="net.kibotu.webviewadapter"/>
+<manifest package="net.kibotu.webviewadapter" />
