--- a/webviewadapter/build.gradle
+++ b/webviewadapter/build.gradle
@@ -65,12 +65,21 @@ android {
     }
 
     // endregion
-}
 
+    // region exclude duplicated meta inf files
+
+    packagingOptions {
+        exclude 'META-INF/library-core_release.kotlin_module'
+    }
+
+    // endregion
+}
 
 dependencies {
     implementation libs.kotlinJdk8
     implementation libs.constraintLayout
+    implementation libs.supportAnnotations
+    implementation libs.supportDesign
 }
 
 configurations.all {
@@ -78,6 +87,8 @@ configurations.all {
 
     resolutionStrategy.force libs.kotlinJdk8
     resolutionStrategy.force libs.constraintLayout
+    resolutionStrategy.force libs.supportAnnotations
+    resolutionStrategy.force libs.supportDesign
 }
 
 apply from: "${project.rootDir}/Android-Dependencies/javadoc.gradle"
