--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,9 +103,12 @@ dependencies {
     implementation libs.supportDesign
 
     implementation project(':webviewadapter')
+//    implementation 'com.github.kibotu:WebViewAdapter:0.5.0'
 
     implementation(libs.exozetCore)
     implementation libs.logger
+
+
 }
 
 // region override support library version
